<resources>
    <string name="app_name">GKITR</string>
    <string name="login">登录</string>
    <string name="rememberPassword">记住密码</string>
    <string name="inputPassword">请输入密码</string>
    <string name="password">密码:</string>
    <string name="inputUserName">请输入用户名</string>
    <string name="userName">用户:</string>
    <string name="check">检验</string>
    <string name="carto">谷歌</string>
    <string name="gmap">建图</string>
    <string name="navi">导航</string>
    <string name="start">启 动</string>
    <string name="uploadMap">上传地图</string>
    <string name="downloadMap">下载地图</string>
    <string name="autoCharge">回充</string>
    <string name="robotNoService">连接机器人失败</string>
    <string name="checkingNetwork">WIFI已连接,正在检查网络…请稍候</string>
    <string name="wifiDisconnected">WIFI已断开,如需继续使用,请连接机器人WIFI</string>
    <string name="robotIsConnected">已连接机器人</string>
    <string name="getPermissionSuccess">权限获取成功</string>
    <string name="storagePermissionsUnavailable">存储权限不可用</string>
    <string name="allowUseStoragePermissions">请在-应用设置-权限-中,允许GKITR使用存储权限来存储用户数据</string>
    <string name="openImmediately">立即开启</string>
    <string name="cancel">取消</string>
    <string name="wifiOrIpWrong">WIFI或IP地址错误,请检查</string>
    <string name="nowAtNavi">当前处于导航服务</string>
    <string name="nowAtGmap">当前处于建图服务</string>
    <string name="noRosServiceNow">当前未启动服务</string>
    <string name="failedBecauseWifiError">访问失败,未连接正确的WIFI</string>
    <string name="stoppedBecauseWifiOrIpError">WIFI或IP错误,操作终止</string>
    <string name="uploadSuccessNumber">地图上传完毕,成功数量:</string>
    <string name="failedNumber">,失败数量:</string>
    <string name="deletedMapSuccess">地图删除成功</string>
    <string name="downloadSuccessNumber">地图下载完毕,成功数量:</string>
    <string name="versionInfo">版本信息</string>
    <string name="loggingIn">正在登录,请稍候…</string>
    <string name="loginSuccessfully">登录成功</string>
    <string name="userNameOrPasswordError">用户名或密码错误</string>
    <string name="startupCancelled">启动已取消</string>
    <string name="stopNavigation">停止导航</string>
    <string name="continueNavigation">继续导航</string>
    <string name="refreshingNow">正在刷新,请稍候…</string>
    <string name="refreshPage">刷新页面</string>
    <string name="hiddenHandle">隐藏手柄</string>
    <string name="showHandle">显示手柄</string>
    <string name="sleepStandby">休眠待机</string>
    <string name="deleteMap">删除地图</string>
    <string name="startCharging">开始充电</string>
    <string name="stopCharging">停止充电</string>
    <string name="toolBox">工具箱</string>
    <string name="toBeStandbyStatus">正在进入待机状态,请稍候…</string>
    <string name="robotRosServiceIsNotOn">机器人Ros服务未启动,请稍候再试</string>
    <string name="selectMapToDownload">请选择地图,下载到平板/手机</string>
    <string name="downloading">正在下载</string>
    <string name="mapsAndWait">张地图,请稍候…</string>
    <string name="noDownloadableMap">当前没有可下载地图</string>
    <string name="selectMapToUpload">请选择地图,上传到机器人</string>
    <string name="uploading">正在上传</string>
    <string name="noUploadableMap">当前没有地图可供上传</string>
    <string name="selectMapToDelete">请选择要删除的地图</string>
    <string name="deleting">正在删除</string>
    <string name="noDeletableMap">当前没有可删除地图</string>
    <string name="noSelectableMapToNavi">没有可选地图,使用默认地图进行导航</string>
    <string name="clickOneMoreToClose">再按一次退出程序</string>
    <string name="goCharge">前往充电</string>
    <string name="changeToTheDownLidar">切换到下层激光显示</string>
    <string name="changeToTheUpLidar">切换到上层激光显示</string>
    <string name="doOneMeterGo">正在执行1米直行</string>
    <string name="do360DegreeTun">正在执行360度自转</string>
    <string name="rosServiceStartSuccess">ROS服务启动成功</string>
    <string name="deviceConnected">设备已连接</string>
    <string name="rightRear">右后:  </string>
    <string name="rightFront">右前:  </string>
    <string name="deadAhead">正前:  </string>
    <string name="leftFront">左前:  </string>
    <string name="leftRear">左后:  </string>
    <string name="meter">米</string>
    <string name="notInstalled">未安装</string>
    <string name="initialization">正在初始化,请稍候…</string>
    <string name="oneMeterRunOver">一米直行完成</string>
    <string name="degree360RotationOver">360度自转完成</string>
    <string name="terminatedTheAction">您终止了该操作</string>
    <string name="imuAngle">陀螺仪[角度:</string>
    <string name="setGoalPose">设置目标点</string>
    <string name="dontChangeFrequently">请勿频繁切换语言</string>
    <string name="isLoadingRosService">正在加载ROS服务</string>
    <string name="mapNameIllegal">地图名称不能是保留词,请重新输入</string>
    <string name="cantAddTheSamePose">不能添加同名目标点</string>
    <string name="noRCP">目标点名称中不能包含 rcpeai 字段</string>
    <string name="mapNameCantBeNone">地图名不能为空</string>
    <string name="stoppingNav">正在停止导航</string>
    <string name="navContinue">继续导航</string>
    <string name="noSavedPose">当前尚未存在目标点</string>
    <string name="pleaseSetChargeFirst">请先设置充电桩</string>
    <string name="goForCharge">前往充电桩充电</string>
    <string name="chargePileIsSetted">充电桩已设置,如需改变,请删除原充电桩</string>
    <string name="pleaseSetCharge">请设置充电桩</string>
    <string name="cancleToSetCharge">取消设置充电桩</string>
    <string name="noChargePileToDel">当前没有可移除充电桩</string>
    <string name="setInitPose">设置初始点</string>
    <string name="serviceIsNone">服务未连接,请回到启动界面重新启动</string>
    <string name="mapCanClick">可以设置初始点/目标点</string>
    <string name="mapCanMove">可以移动/缩放地图</string>
    <string name="mapCantEdit">地图未显示,无法编辑地图</string>
    <string name="mapIsNotShow">地图未显示,无法绘制虚拟墙</string>
    <string name="noPoseToGo">当前没有可导航目标点</string>
    <string name="resetNavGo">重新开始导航</string>
    <string name="singleNavTo">单点导航到</string>
    <string name="stopGoTo">停止前往</string>
    <string name="chargeStopped">充电停止</string>
    <string name="navStopped">导航已停止</string>
    <string name="saveMapSuccess">地图保存成功</string>
    <string name="findChargePile">正在与充电桩对接,请稍候...</string>
    <string name="navFailed">导航失败,请确认目标点或当前位置是否正确</string>
    <string name="navCancled">导航被取消</string>
    <string name="initNav">导航初始化完成</string>
    <string name="noChargeNoPose">当前地图暂不存在目标点和充电桩</string>
    <string name="noPose">当前地图暂不存在目标点</string>
    <string name="robotType">产品型号：</string>
    <string name="versionText">版本更新说明</string>
    <string name="chargeInconsequently">充电桩设置不合理,请重新设置</string>
    <string name="choice">请选择</string>
    <string name="deletingMap">正在删除地图...</string>
    <string name="changeMap">切换地图</string>
    <string name="onlyOnNavigation">仅允许导航模式下执行</string>
    <string name="btnDownloadMap">下载地图</string>
    <string name="btnUploadMap">上传地图</string>
    <string name="getPoseSuccessfully">获取目标点成功</string>
    <string name="selectDLmapName">请选择要下载到手机的地图</string>
    <string name="getNoPose">没有已保存的pose信息</string>
    <string name="getPoseFile">正在获取目标点文件</string>
    <string name="selectULmapName">请选择要上传到EAIBOT的地图名</string>
    <string name="sthIsWrong">操作失败,请重试</string>
    <string name="noMapInDL">Download文件夹中还没有可上传的地图文件</string>
    <string name="setGoogleMap">已设置为当前地图</string>
    <string name="googleMap">谷歌地图</string>
    <string name="normalMap">普通地图</string>
    <string name="googleGmapping">谷歌建图</string>
    <string name="normalGmapping">普通建图</string>
    <string name="selectMapMode">请选择地图类型</string>
    <string name="selectGmappingMode">请选择建图类型</string>
    <string name="inputMapName">请输入您要上传的地图的名称</string>
    <string name="getNoMaps">当前没有地图可供下载</string>
    <string name="downloadMapFailed">下载地图失败</string>
    <string name="uploadMapFailed">上传地图失败</string>
    <string name="downloadMapSuccess">下载地图成功</string>
    <string name="uploadMapSuccess">上传地图成功</string>
    <string name="upload_map">正在上传地图…</string>
    <string name="download_map">正在下载地图…</string>
    <string name="checking_network">正在检查网络…</string>
    <string name="unconnect_device_wifi">未连接设备所用网络</string>
    <string name="gmp_change_hint">如需进入建图模式,请重启APP</string>
    <string name="nav_change_hint">如需进入导航模式,请重启APP</string>
    <string name="nav_is_abnormal">导航异常,正在重新规划路线</string>
    <string name="recyclerview_move_hint">请在停止状态下编辑队列</string>
    <string name="ischarged">已经在充电了</string>
    <string name="ischarging">正在充电</string>
    <string name="chargepile">充电桩</string>
    <string name="begin_charge">充电开始</string>
    <string name="arrived">到达</string>
    <string name="nav_success">到达目标点</string>
    <string name="forward">前往</string>
    <string name="point">点</string>
    <string name="chargingpile_isdeleted">充电桩已删除</string>
    <string name="gopose_cancel">导航停止</string>
    <string name="gopose_beigin">开始导航</string>
    <string name="btn_gmapping">建图</string>
    <string name="btn_navigation">导航</string>
    <string name="swerve_speed">转向速度</string>
    <string name="forward_speed">前进速度</string>
    <string name="setting">设 置</string>
    <string name="charge_buttons">充 电 按 钮</string>
    <string name="function_buttons">功 能 按 钮</string>
    <string name="system_status">系 统 状 态</string>
    <string name="markpose_list">导 航 点 列 表</string>
    <string name="no_clearable_chargingpile">没有可清除的充电桩了</string>
    <string name="electricity_is_full">电量已充满,已停止充电</string>
    <string name="electricity_under_10">电量已低于10%,正在自动回到充电桩充电</string>
    <string name="charging_pile_unsetted">还没有设置充电桩的位置</string>
    <string name="set_charging_pile">请设置充电桩位置</string>
    <string name="charge_stopped">已停止充电</string>
    <string name="charging_pile_setted">充电桩已设置</string>
    <string name="road_delete">删除</string>
    <string name="select_the_queue">选择队列</string>
    <string name="edit_the_queue">编辑队列</string>
    <string name="please_name_map">请为地图命名:</string>
    <string name="dialog_cancel">取 消</string>
    <string name="dialog_confirm">确 定</string>
    <string name="select_enter_mode">请选择进入模式</string>
    <string name="run_mode">行走模式</string>
    <string name="gmapping_navigation_mode">建图导航模式</string>
    <string name="internet_unconnected">亲，网络还没有连上喔…</string>
    <string name="enter_directly">直接进入-></string>
    <string name="ros_url_connection">连接</string>
    <string name="service_select_dialog">服务选择对话框</string>
    <string name="gmapping_yes_or_no">是否需要建图</string>
    <string name="ros_url_no">否</string>
    <string name="ros_url_yes">是</string>
    <string name="maps_list">地图列表</string>
    <string name="toast_service_starting">正在启动服务，请稍候…</string>
    <string name="ip_ping_unconnected">IP ping不能通，请检查网络或IP…</string>
    <string name="ip_cannot_be_empty">IP不能为空</string>
    <string name="no_maps">没有地图可选，启动默认地图</string>
    <string name="changing_map">正在切换地图，请稍候…</string>
    <string name="connect_failed">连接失败，请重新连接!</string>
    <string name="connecting_robot">正在连接机器人......</string>
    <string name="connected_robot">已经连接机器人</string>
    <string name="getposefailed_initpose_byhand">没有获取到保存的位置，请手动设置初始位置</string>
    <string name="no_goalpath">暂时没有路径了</string>
    <string name="markpose">标定位置</string>
    <string name="robotpose_pleasedo">请为地点[</string>
    <string name="robotpose_nominate">]命名:</string>
    <string name="posename_cannotbe_empty">地点名不能为空</string>
    <string name="getting_error_logs">正在获取错误日志，请稍候…</string>
    <string name="getting_machine_state">正在获取系统基础状态，请稍候…</string>
    <string name="getting_ros_state">正在获取ROS服务运行状态，请稍候…</string>
    <string name="resetting_map">正在重置地图…</string>
    <string name="updating_map">正在刷新地图…</string>
    <string name="please_save_map">保存地图</string>
    <string name="saving_map">正在保存地图…</string>
    <string name="mainactivity_maps_list">地图列表</string>
    <string name="mainactivity_changing_map">正在切换地图,请稍候…</string>
    <string name="mainactivity_no_maps">暂时没有地图</string>
    <string name="no_goalpose">当前没有目标点</string>
    <string name="select_map_operation">请选择要进行的地图操作</string>
    <string name="stop_gmapping">停止扫图</string>
    <string name="pause_gmapping">暂停扫图</string>
    <string name="start_gmapping">开始扫图</string>
    <string name="gmappingmode_change_hint">扫图模式切换提示</string>
    <string name="change_autogmapping_to_gmapping">确定从"自动扫图"切换到"手动扫图"?</string>
    <string name="change_gmapping_to_autogmapping">确定从"手动扫图"切换到"自动扫图"?</string>
</resources>