<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/roads_point_xyz"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_name_map" />

    <EditText
        android:maxLength="20"
        android:id="@+id/roads_point_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/roads_cancel_button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"
            android:textColor="#fff"
            android:text="@string/dialog_cancel" />

        <Button
            android:id="@+id/roads_submit_button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_shape"
            android:textColor="#fff"
            android:text="@string/dialog_confirm" />
    </LinearLayout>

</LinearLayout>