<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="loginViewModel"
            type="com.eaibot.running.viewmodel.LoginViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/bg_login"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="30dp"
            android:background="@drawable/background_shape"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="16sp"
                    android:text="@string/userName"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/userName"
                    android:padding="5dp"
                    android:text="@{loginViewModel.obUserName}"
                    android:textColorHint="#b8404040"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/style_edittext"
                    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_"
                    android:inputType="text"
                    android:hint="@string/inputUserName"
                    android:layout_width="200dp"
                    android:layout_height="35dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="16sp"
                    android:text="@string/password"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/userPwd"
                    android:padding="5dp"
                    android:textColorHint="#b8404040"
                    android:layout_marginLeft="10dp"
                    android:text="@{loginViewModel.obPassword}"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/style_edittext"
                    android:inputType="textPassword"
                    android:hint="@string/inputPassword"
                    android:layout_width="200dp"
                    android:layout_height="35dp" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/rememberPwd"
                android:textColor="#fff"
                android:text="@string/rememberPassword"
                android:checked="true"
                android:layout_marginTop="10dp"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/login"
                android:text="@string/login"
                android:onClick="@{()->loginViewModel.onLogin()}"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_selector_save_setting"
                android:layout_width="75dp"
                android:layout_height="35dp" />

        </LinearLayout>

        <TextView
            android:textSize="18sp"
            android:gravity="bottom|right"
            android:id="@+id/changeLanguage"
            android:text="@{loginViewModel.obLanguageText}"
            android:onClick="@{()->loginViewModel.changeLanguage()}"
            android:layout_margin="50dp"
            android:layout_gravity="bottom|right"

            android:layout_width="100dp"
            android:layout_height="50dp" />

        <TextView
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:layout_gravity="left|bottom"
            android:text="GKITR v1.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>
</layout>